master

2.31.2
- Mayhem
  Add /x/ archive redirection.

2.31.1
- Mayhem
  Fix some stub issues.

2.31.0
- Mayhem
  Add a per filter stub setting.

2.30.8
- Mayhem
  Fix quote previewing of forward hidden posts.

2.30.7
- aeosynth
  Fix expanding comments.
- Mayhem
  Fix file size info in case of spoiler image.

2.30.6
- Mayhem
  Fix file size formatting always using integers.

2.30.5
- Mayhem
  Fix syntax highlighting in code of fetched posts on /g/.
  Add quick [code] tags keybind (alt+c).

2.30.4
- Mayhem
  Add /co/ and /k/ archive redirection.
  Fix quote resurrection of existing posts.

2.30.3
- Mayhem
  Various bug fixes.

2.30.2
- Mayhem
  Various bug fixes.
  Add seconds as a supported Time Formatting specifier.

2.30.1
- Mayhem
  Fix 4chan X not affecting fetched posts on Firefox Stable and Opera.

2.30.0
- Mayhem
  Support 4chan's new HTML.
  Add Spoiler indicator option in File Info Formatting
  Remove archive.no-ip.org archive redirections.

2.29.5
- Mayhem
  Fix QR filetype checking on /w/.

2.29.4
- Mayhem
  Auto-GIF will not run in /gif/.
  Fix QR filetype checking.

2.29.3
- Mayhem
  Update Quick Reply posting method, this fixes compatibility for uncommon browsers such as
    Opera Mobile 12 and Luakit for example.

2.29.2
- Mayhem
  Add HTTPS support.
  Ban support improvements and fixes.

2.29.1
- Mayhem
  Update posting support to use https with sys.4chan.org according to 4chan's latest change. This fixes the 'referer' error.
  Update redirection to installgentoo's archives.

2.29.0
- Mayhem
  New feature: Quote Resurrection, automatically linkifying dead quotes to archives.

2.28.1
- Mayhem
  General performance improvements.
  Threads will now be updated instantly after posting through the QR.
  Your own posts will not count toward the unread count after posting through the QR.
  Performance issues are now lessened with QR thumbnails of high-res pictures.
  You can now use Shift+Click on the file input to remove the selected reply's file.